--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -2,21 +2,24 @@
 <section>
 <div class="post">
     <div class="post-title">
+        <header class="card-header">
+        <div class="column">
         <h4><a href="/post/{{id}}">{{title}}</a></h4>
     </div>
+    </header>
     
-   <div class="meta">
-      {{user.username}} on {{format_date created_at}}
-    </div>
+<div class="column">
+      <span class=""> </span>
+      </div>
+     <div class="post"></div>
+     {{post_content}}
+        </div>
 
-    <br>
-        <div class="post-content">{{post_content}}
-        <br><br>
-    
-    <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
-  </div>
- </div>
-</div>
+   <div class="meta" id="meta">
+      {{user.username}} on {{format_date created_at}}
+      |
+      <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
+    </div>
 </section>
 
 
