--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Electro_Enthusiast</title>
      <link rel="stylesheet" href="../../stylesheets/style.css">
+     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
  </head>
@@ -14,16 +15,12 @@
 <nav>
   <div class="navbar" id="navbar">
         {{!-- <a href="#" id="my-account"><span class="glyphicon glyphicon-user"></span>My Account</a> --}}
+        <a href="/" id="dashboard">Electro_Enthusiast</a>
         <a href="/dashboard" id="dashboard">dashboard</a>
         <button id="logout" class="logout-btn">logout</button>
-  </div>
-</nav>
-    <div class="header">
-      <header>
-        <p>Welcome to the community. This is your place to ask questions, leave reviews, and interact with fellow electronic enthusiats. Check out new posts below and let's get to chatting!</p>
       {{/if}} 
+      </nav>
     </header>
-</div>
 
     <main>
       {{{ body }}}
@@ -37,5 +34,6 @@
   <script src="/javascript/logout.js"></script>
   {{/if}}
 </body>
+
 </html>  
-  <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
+  
