--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -8,7 +8,7 @@
        <input name="post-title" type="text" value="{{post.title}}" />
     </div>
     <div>
-           <input class="textarea" name="post-content" type="text" value="{{post.post_content}}" />
+           <input name="post-content" type="text" value="{{post.post_content}}" />
     </div>
     <div>
         created by you on {{format_date post.created_at}}
